# GitSyntropy

./: .gitignore  01_GitSyntropy_Architecture.md  README.md  SECRETS_SETUP.md  UI_UX_POLISH_PLAN.md  design.md  resume-prompt.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
Claude-prompt-guides/: CLAUDE_CODE_COMPLETE_PACKAGE_SUMMARY.md  CLAUDE_CODE_INDEX.md  CLAUDE_CODE_INITIAL_EXPLORATION.md  CLAUDE_CODE_PROMPT_STRATEGY.md  CLAUDE_CODE_QUICK_REFERENCE.md  CLAUDE_CODE_VISUAL_REFERENCE.md
apps/backend/: .env.example  README.md  mypy_errors.txt  pyproject.toml  pytest_errors.txt  railway.toml  render.yaml  requirements.txt
apps/backend/app/: __init__.py  claude_client.py  config.py  database.py  github_client.py  main.py  models.py  schemas.py  services.py
apps/backend/gitsyntropy_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/migrations/: 001_initial_schema.sql
apps/backend/tests/: conftest.py  test_auth.py  test_cat_assessment.py  test_compatibility.py  test_coverage_gaps.py  test_github_client.py  test_health.py  test_monte_carlo.py  test_teams.py
apps/frontend/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json  (+3 more)
design-styles/: dashboard.html  index.html  styles.css  uikit.html
docs/: DEPLOYMENT_GUIDE.md  GitSyntropy_IEEE_WorldSUAS2026.tex  LLM_HANDOFF.md  RESEARCH_PAPER_PLAN.md  runbook.md
frontend-design/: assessment.html  auth.html  dash.html  design-imporve.txt.txt  insights.html  land.html  workspace.html
old-proj-docs/: GITSYNTROPY_PROJECT_PLAN.md  INVESTOR_DECK.md  QUICK_REFERENCE.md  README.md  TECHNICAL_ARCHITECTURE.md
(+36 files in other folders)
