[project]
name = "gitsyntropy-backend"
version = "0.1.0"
description = "GitSyntropy FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "langgraph>=1.1.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.29.0",
  "anthropic>=0.40.0",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
  "PyGithub>=2.3.0",
  "gql[httpx]>=3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
